Replaced link in culture > expectations

--- a/culture/expectations.qmd
+++ b/culture/expectations.qmd
@@ -51,7 +51,7 @@ DRAFT - SWAMP Unit to Review and revise as appropriate
 +------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Meetings         | See above                                                                                                                                                                           | External partners                 | See above                                                                                                                                                            | Develop a formal agenda - send out at least 1 week prior to the meeting/webinar.                                                                                               |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
-| (Zoom)           | Use Zoom meetings when communicating with external partners. See [instructions for scheduling Zoom meetings](https://cawaterboarddatacenter.github.io/swamp-manual/tech.html#zoom). |                                   |                                                                                                                                                                      | For other tips, see: [How to Run a Meeting](https://docs.google.com/presentation/u/2/d/1HSdgVQjq0d3UYh-aA4uWHXxYYpySn_xXwfn_M4Ms8Ts/htmlpresent)                               |
+| (Zoom)           | Use Zoom meetings when communicating with external partners. See [instructions for scheduling Zoom meetings](https://cawaterboarddatacenter.github.io/swamp-manual/admin/tech.html#zoom). |                                   |                                                                                                                                                                      | For other tips, see: [How to Run a Meeting](https://docs.google.com/presentation/u/2/d/1HSdgVQjq0d3UYh-aA4uWHXxYYpySn_xXwfn_M4Ms8Ts/htmlpresent)                               |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  | Use Zoom webinar for large, publicly facing events.                                                                                                                                 |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
 |                  |                                                                                                                                                                                     |                                   |                                                                                                                                                                      |                                                                                                                                                                                |
