--- a/about/lifecycle.qmd
+++ b/about/lifecycle.qmd
@@ -4,19 +4,19 @@ All SWAMP activities align with some component of the [data life cycle](https://
 
 ## Plan and Prepare
 
-The SWAMP Team, and all of the individuals within it, tend to have a number of co-occurring projects that are meant to help us advance and ultimately achieve our Mission. Managing multiple projects at once, given our limited resources -- time, funding, capacity (i.e. one person can only do so much in a day!) can be challenging -- so we like to make time to review all of our projects and prioritize them. This helps us focus our efforts and resources so that we can continue to make progress while also maintaining balance and preventing staff burnout. 
+The SWAMP Team, and all of the individuals within it, tend to have a number of co-occurring projects that are meant to help us advance and ultimately achieve our Mission. Managing multiple projects at once, given our limited resources -- time, funding, capacity (i.e. one person can only do so much in a day!) can be challenging -- so we like to make time to review all of our projects and prioritize them. This helps us focus our efforts and resources so that we can continue to make progress while also maintaining balance and preventing staff burnout.
 
-Here are some opportunities to plan & prepare SWAMP projects and activities which serve our mission: 
+Here are some opportunities to plan & prepare SWAMP projects and activities which serve our mission:
 
 **SWAMP Strategic Planning**: Every three years or so, the SWAMP Team reviews and updates the SWAMP Strategic Plan to account for changes in priorities and bandwidth.
 
 **Program Work Plans**: Every three years or so, SWAMP Program Leads review and update their program's Work Plans to account for changes in priorities and bandwidth.
 
-**Individual Work Plans**: In December/January of each year, we recommend taking time to update individual work plans to account for changes in priorities and bandwidth. This is also a good time to review and update [Individual Development Plans](https://cawaterboarddatacenter.github.io/swamp-manual/development.html#individual-development-plan-idp), if staff have them! 
+**Individual Work Plans**: In December/January of each year, we recommend taking time to update individual work plans to account for changes in priorities and bandwidth. This is also a good time to review and update [Individual Development Plans](https://cawaterboarddatacenter.github.io/swamp-manual/culture/development.html#individual-development-plan-idp), if staff have them!
 
 ## Collect and Process
 
-For SWAMP Statewide Monitoring Programs, data collection and processing generally occurs sometime between March and October each year. This time frame can vary for each Statewide Monitoring Program so it's best to review each Program's [Quality Assurance Project Plan (QAPP)](https://cawaterboarddatacenter.github.io/swamp-manual/about-swamp.html#swamp-resources) for specific sampling and processing timelines.
+For SWAMP Statewide Monitoring Programs, data collection and processing generally occurs sometime between March and October each year. This time frame can vary for each Statewide Monitoring Program so it's best to review each Program's [Quality Assurance Project Plan (QAPP)](https://www.waterboards.ca.gov/water_issues/programs/swamp/quality_assurance.html) for specific sampling and processing timelines.
 
 The SWAMP Team does so much more than manage and coordinate SWAMP Statewide Monitoring Programs! For those projects, data collection and processing can look very different. Usually it comes in the form of engagement with internal and external partners, listening to the needs of communities that can most benefit from SWAMP data, information, and products, and figuring out how to operationalize and evolve our products and systems to better serve those communities and our partners. This process tends to be ongoing, although there may also be focused and concentrated periods where this listening and learning occurs.
 
@@ -89,18 +89,18 @@ After SWAMP Data are assessed and processed by SWAMP IQ, they are published and 
 |                                                                                                                                                                                 |                                                                                                                      |                                                                                                  |
 | (part of the [Statewide Bioassessment Monitoring Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/bioassessment/))                                           | [Annual Meeting](https://www.waterboards.ca.gov/water_issues/programs/swamp/bioassessment/training.html#cabw) (CABW) | Annual meeting: Open to the public                                                               |
 +---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+
-| [Safe to Eat Workgroup (STEW)](https://mywaterquality.ca.gov/monitoring_council/bioaccumulation_oversight_group/index.html)                                                     | Quarterly                                                                                                            | Open to the public                                                                               |
+| [Safe to Eat Workgroup (STEW)](https://mywaterquality.ca.gov/safe-to-eat/)                                                                                                      | Quarterly                                                                                                            | Open to the public                                                                               |
 |                                                                                                                                                                                 |                                                                                                                      |                                                                                                  |
 | (part of the [Statewide Bioaccumulation Monitoring Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/bioaccumulation_monitoring.html))                        |                                                                                                                      |                                                                                                  |
 +---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+
-| [California Cyanobacteria and Harmful Algal Bloom (CCHAB) Network](https://mywaterquality.ca.gov/monitoring_council/cyanohab_network/index.html)                                | Quarterly                                                                                                            | Open to the public                                                                               |
+| [California Cyanobacteria and Harmful Algal Bloom (CCHAB) Network](https://mywaterquality.ca.gov/cyanohab/)                                                                     | Quarterly                                                                                                            | Open to the public                                                                               |
 |                                                                                                                                                                                 |                                                                                                                      |                                                                                                  |
 | (part of the [Statewide Freshwater and Estuarine Harmful Algal Bloom (FHAB) Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/freshwater_cyanobacteria.html)) |                                                                                                                      |                                                                                                  |
 +---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------+
 
 ## Discover and Integrate
 
-As we discover new things and/or opportunities to improve the data, products, or services we generate, we integrate them into the project or process. Sometimes this can occur quickly, other times we make note and incorporate things into the next strategic planning opportunity. See the [Plan and Prepare](https://cawaterboarddatacenter.github.io/swamp-manual/lifecycle.html#plan-and-prepare) section above for more details.
+As we discover new things and/or opportunities to improve the data, products, or services we generate, we integrate them into the project or process. Sometimes this can occur quickly, other times we make note and incorporate things into the next strategic planning opportunity. See the [Plan and Prepare](https://cawaterboarddatacenter.github.io/swamp-manual/about/lifecycle.html#plan-and-prepare) section above for more details.
 
 ## Describe
 
