--- a/admin/tech.qmd
+++ b/admin/tech.qmd
@@ -98,42 +98,19 @@ Tableau is a business intelligence tool that can connect to and access data from
 
 **Tableau Software for Desktop**
 
--   **Tableau Desktop** is the full (or unrestricted) version of Tableau that can be installed onto one's state-issued laptop or desktop computer. Once installed, it can be run as a desktop application and visualizations can be published on either Tableau Public or Tableau Server. A limited number of Tableau Desktop licenses are available to Water Boards staff. These  licenses are named licenses only (not shared) and are tied to a specific user. Contact the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) to request a license or contact Rafael Maestu ([Rafael.Maestu\@Waterboards.ca.gov](mailto:Rafael.Maestu@Waterboards.ca.gov)) in OIMA for further guidance. 
+-   **Tableau Desktop** is the full version of Tableau that can be installed onto one's state-issued laptop or desktop computer. Once installed, it can be run as a desktop application and visualizations can be published on Tableau Server. A limited number of Tableau Desktop licenses are available to Water Boards staff. These licenses are named licenses only (not shared) and are tied to a specific user. Contact Rafael Maestu ([Rafael.Maestu\@Waterboards.ca.gov](mailto:Rafael.Maestu@Waterboards.ca.gov)) in OIMA to request a license. You may also need to contact DIT Help Desk to request that Tableau Desktop be added to your computer's Software Center.
 
--   **Tableau Desktop Public Edition** is the free version of Tableau Desktop that is available to all Water Boards staff. The software can be downloaded from the Tableau Public website ([Tableau Public Product Download](https://www.tableau.com/products/public/download)). If you run into any permissions issues trying to install the software package on your computer, you may need to request that the DIT Help Desk at [help\@waterboards.ca.gov](mailto:help@waterboards.ca.gov) install it for you. Compared to Tableau Desktop, Tableau Desktop Public Edition has a number of significant limitations (e.g., limited size and file type of data sources, inability to save Tableau workbooks to the desktop, inability to control access to the Tableau workbook or the underlying data), so it is likely only useful for evaluation purposes or projects with a very limited scope. 
+-   **Tableau Public** is the free version of Tableau Desktop that does not require a license for you to use it. Compared to Tableau Desktop, however, it has a number of significant limitations (e.g., limited size and file type of data sources, inability to save Tableau workbooks to the desktop, inability to control access to the Tableau workbook or the underlying data), so it is likely only useful for evaluation purposes or projects with a very limited scope. For most cases, we recommend using Tableau Desktop over Tableau Public. If Tableau Public is not already available in your computer's Software Center, contact DIT Help Desk to request access.
 
 **Tableau Server**
 
--   Tableau Server is an online platform for creating, publishing, and sharing Tableau data sources, visualizations, and dashboards. Tableau Server is a web-based platform, so it does not require an installation of Tableau Desktop or Tableau Desktop Public Edition, but its functionality is enhanced when the two are used together. See our [SharePoint page](https://cawaterboards.sharepoint.com/sites/OIMA/DIA/SitePages/Tableau-Server.aspx) for more information about Tableau Server.
+-   Tableau Server is an online platform for creating, publishing, and sharing Tableau data sources, visualizations, and dashboards. Tableau Server is a web-based platform, so it does not require an installation of Tableau Desktop, but its functionality is enhanced when the two are used together. See our [SharePoint page](https://cawaterboards.sharepoint.com/sites/OIMA/DIA/SitePages/Tableau-Server.aspx) for more information about Tableau Server.
 
--   **Access**: Users with a Water Boards account (i.e., have an email address that ends with "@waterboards.ca.gov") should be able to access the internal Tableau Server website (<https://tableauint.waterboards.ca.gov/#/site>). If you cannot log in, or if you need help publishing your dataset or visualization, email [waterdata\@waterboards.ca.gov](mailto:waterdata@waterboards.ca.gov).
+-   Tableau Server is the main platform used for sharing/publishing data visualizations created in Tableau Desktop.
 
--   **Advantages**: 
+    -   **Internal Tableau Server**: Use the internal Tableau Server to share data visualizations with internal Water Boards staff only. Users with a Water Boards account (i.e., have an email address that ends with "@waterboards.ca.gov") should be able to access the internal Tableau Server website (<https://tableauint.waterboards.ca.gov/#/site>). If you cannot log in, or if you need help publishing your dataset or visualization, email [waterdata\@waterboards.ca.gov](mailto:waterdata@waterboards.ca.gov).
 
-    -   Sharing data sources: Data sources published on Tableau Server can be shared with others on your team or with others in the organization. 
-    -   Automation: Data visualizations and sources published on Tableau Server can be automatically refreshed on a time schedule.  
-
--   **Limitations**:
-
-    -   Tableau Server can be used to create data visualizations and dashboards like you would in Tableau Desktop or Tableau Desktop Public Edition.
-
-    -   Most of the functionality is the same; however, there are some differences. For example, Tableau Server does not provide as many options for customizing and formatting your visualization.
-
-    -   Related to this, transferring and viewing Tableau files between Tableau Desktop software and Tableau Server can result in formatting issues.  
-
-**Publishing Tableau Visualizations** 
-
--   Visualizations created in Tableau Desktop or Tableau Desktop Public Edition can be published on Tableau Server or Tableau Public. Visualizations created in Tableau Server are automatically published on Tableau Server (sharing permissions can be changed in Tableau Server). 
-
-    -   Tableau Server: Requires Tableau Server access. See the Tableau Server section above. 
-
-    -   Tableau Public: Requires a Tableau Public account. Free (self-registration). <https://public.tableau.com/>  
-
--   Once a visualization is published on Tableau Server or Tableau Public (and configured for public sharing), then that visualization can be embedded into a Water Boards web page. 
-
-::: callout-note
-Reminder to add recommendations section once we hear about what RM recommends (i.e. Tableau Desktop Public or Tableau Server)
-:::
+    -   **External Tableau Server**: Use the external Tableau Server to share data visualizations with external partners outside of the Water Boards network or to publish/embed a data visualization on a public Water Boards webpage. The external Tableau Server is currently managed by staff in OIMA and DIT. Please email [waterdata\@waterboards.ca.gov](mailto:waterdata@waterboards.ca.gov) for assistance.
 
 ### PowerBI
 
